# A-generalised-mcts-research-skills-based-on-embedding-space

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_NEXT_STEPS.md  HOOK_WIRING_TODO.md  LICENSE  PRD.md  PROTOTYPE.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_REPO_SETTINGS.md  README.md  READ_THIS_FIRST_REAL_ORACLE_BLOCKER.md  SKILL.md  SPEC.md  pyproject.toml  requirements.txt
.dte_cache/: smoke_cache.json
agents/: openai.yaml
docs/: CODEX_APP_WORKFLOW.md  MOCK_END_TO_END_EXAMPLE.md
examples/: echo_executor_adapter.py  executor_output.json  executor_parent.json  expansion_request.json  frontier_nodes.json  judge_output.json  mock_executor_adapter.py  mock_judge_adapter.py  mock_relation_adapter.py  relation_output.json  relation_result.json  run_spec.json  synthesis_control_request.json
hooks/: README.md  dte_guard.py  dte_prompt_guard.py  validate_search_node.py
prompts/: DTE_STATIC_PREFIX.md  executor.md  executor_subagent.md  judge.md  judge_oracle.md  relation_oracle.md  strategy_generator.md  synthesis.md
schemas/: expansion_request.schema.json  run_spec.schema.json  search_node.schema.json  synthesis_control_request.schema.json
scripts/: codex_judge_adapter.py  gemini_smoke.py  smoke_epistemic_workflow.py  smoke_workflow.py
tests/: test_adapter.py  test_agent_episode.py  test_app_driver.py  test_app_judge_progression.py  test_app_post_merge_regressions.py  test_app_relation_readiness.py  test_app_submit_guard.py  test_artifacts.py  test_cache.py  test_cli.py  test_codex_judge_adapter.py  test_context_envelope.py  test_continuation.py  test_control_timing.py  test_embedding.py  test_entropy.py  test_epistemic.py  test_executor_adapter.py  test_file_cache.py  (+22 more)
(+74 files in other folders)
