[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dte-codex-skill-backend"
version = "0.1.0"
description = "DTE fixed research protocol packaged as a Codex-compatible skill/backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yi-frank-phy" }
]
keywords = ["codex", "agent-skill", "research-agent", "search", "ucb", "entropy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dte-backend = "dte_backend.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
